<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.more.ResetPasswordActivity">

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_old"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_psd" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/iv_old"
                android:hint="@string/text_hint_old_password"
                android:inputType="textPassword"
                android:textColor="#3d3d3d"
                android:textSize="16sp"
                app:met_autoValidate="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/text_hint_old"
                app:met_floatingLabelTextSize="15sp"
                app:met_primaryColor="@color/text_red"
                app:met_textColorHint="#BBBBBB" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_new"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_psd" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/iv_new"
                android:hint="@string/text_hint_new_password"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:met_autoValidate="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/text_hint_new"
                app:met_floatingLabelTextSize="15sp"
                app:met_primaryColor="@color/text_red"
                app:met_textColorHint="#BBBBBB" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_new_sure"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_psd" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_new_sure_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/iv_new_sure"
                android:hint="@string/text_hint_new_sure_password"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:met_autoValidate="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/text_hint_new"
                app:met_floatingLabelTextSize="15sp"
                app:met_primaryColor="@color/text_red"
                app:met_textColorHint="#BBBBBB" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_reset_commit"
            android:text="提交"
            android:textColor="@color/text_white"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>