<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/emptyLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_empty" />

        <TextView
            android:id="@+id/textTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_no_data"
            android:textColor="@color/text_des_color"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/fail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/text_refresh"
                android:textColor="@color/text_orange60"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <!--<com.rst.tlcb.view.RotateImageView-->
    <!--android:id_card_num="@+id_card_num/loadingView"-->
    <!--android:layout_width="80dp"-->
    <!--android:layout_height="80dp"-->
    <!--android:src="@drawable/loading1"-->
    <!--android:layout_centerInParent="true" />-->

    <LinearLayout
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0.6"
        android:gravity="center"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:orientation="vertical"
        android:padding="10dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="loading.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/tv_loading_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_loading"
            android:textColor="#222" />

    </LinearLayout>

</RelativeLayout>