<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainTabActivity">

    <LinearLayout
        android:id="@+id/layout_tab"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/layout_lianjin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/card_foreground"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_lianjin"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_lianjin_act" />

            <TextView
                android:id="@+id/tv_lianjin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_lianjin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/text_tab_one"
                android:textColor="#d92f35"
                android:textSize="11sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_cangjin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/card_foreground"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_cangjin"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_cangjin" />

            <TextView
                android:id="@+id/tv_cangjin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_cangjin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/text_tab_two"
                android:textSize="11sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_logo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/card_foreground"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_logo_center" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_juejin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/card_foreground"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_juejin"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_juejin" />

            <TextView
                android:id="@+id/tv_juejin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_juejin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/text_tab_three"
                android:textSize="11sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/card_foreground"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_me"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_me" />

            <TextView
                android:id="@+id/tv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_me"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/text_tab_four"
                android:textSize="11sp" />

        </RelativeLayout>


    </LinearLayout>


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_above="@id/layout_tab"
        android:background="#dbdbdb" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/line" />

</RelativeLayout>
