<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:layout_alignParentTop="true"
            android:background="@color/bg_white">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/login_logo" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/layout_code"
            android:layout_below="@id/layout_logo"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@color/bg_white">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="16dp">


                <include
                    android:id="@+id/input_layout"
                    layout="@layout/input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <Button
                    android:id="@+id/main_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@+id/input_layout"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="34dp"
                    android:layout_marginRight="34dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/selector_commit"
                    android:gravity="center"
                    android:text="@string/btn_text_login"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_white">

            <RelativeLayout
                android:id="@+id/layout_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:background="@color/bg_white"
                android:gravity="center_vertical"
                android:paddingBottom="18dp"
                android:paddingLeft="36dp"
                android:paddingRight="36dp"
                android:paddingTop="18dp">

                <TextView
                    android:id="@+id/tv_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="18dp"
                    android:text="@string/text_get_user"
                    android:textColor="#e6312a"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_code"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_below="@id/tv_get"
                    android:src="@drawable/ic_code" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_get"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@id/iv_code"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_phone"
                        android:textColor="#666666"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:text="028-83278786   028-87732075"
                        android:textColor="#222222"
                        android:textIsSelectable="true"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/text_online"
                        android:textColor="#666666"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="上午：9:00-11:00 下午：12:30-18:00"
                        android:textColor="#222222"
                        android:textSize="12sp" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>