<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaeef3"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:background="@drawable/ic_user_bg"
        android:fitsSystemWindows="true">

        <com.djc.scdjc.view.rcImage.RCImageView
            android:id="@+id/iv_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:scaleType="fitXY"
            app:round_as_circle="true" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/iv_photo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_real_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/text_des_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/text_detail_color"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_service"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/more_service" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/iv_about"
            android:text="@string/text_service"
            android:textColor="#3d3d3d"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/into_btn_more" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:paddingBottom="8dp"
        android:paddingLeft="48dp"
        android:paddingTop="4dp"
        android:visibility="gone">


        <ImageView
            android:id="@+id/iv_code"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_code" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@id/iv_code"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="111"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="111"
                android:textColor="@color/text_des_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="111"
                android:textColor="@color/text_des_color"
                android:textSize="13sp" />

        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_product"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="#dddddd" />

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/more_product" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/iv_product"
            android:text="@string/text_product"
            android:textColor="#3d3d3d"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/into_btn_more" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_suggest"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="#dddddd" />

        <ImageView
            android:id="@+id/iv_suggest"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/more_suggest" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/iv_suggest"
            android:text="@string/text_suggest"
            android:textColor="#3d3d3d"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_suggest_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/into_btn_more" />

        <TextView
            android:id="@+id/tv_has_news"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/iv_suggest_right"
            android:background="@drawable/shape_suggest"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/bg_white"
            android:visibility="gone" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="#dddddd" />

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/more_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/iv_password"
            android:text="@string/text_password"
            android:textColor="#3d3d3d"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/into_btn_more" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_us"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="#dddddd" />

        <ImageView
            android:id="@+id/iv_us"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/more_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/iv_us"
            android:text="@string/text_about"
            android:textColor="#3d3d3d"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/into_btn_more" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_logout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@color/bg_white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/more_logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/iv_logout"
            android:text="@string/text_logout"
            android:textColor="#3d3d3d"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/into_btn_more" />

    </RelativeLayout>

</LinearLayout>